Update changelog for 0.1.1-1 release 		Git-Dch: Ignore

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+logic-analyzer-rpi (0.1.1-1) unstable; urgency=low
+
+  * Initial release (Closes: #703962)
+
+ -- Yves Renier <yrenier@cern.ch>  Thu, 11 Apr 2013 04:52:18 +0000
+
 logic-analyzer-rpi (0.1-1) unstable; urgency=low
 
   * Initial release (Closes: #703962)
